--- a/esmvaltool/recipes/recipe_hyintex.yml
+++ b/esmvaltool/recipes/recipe_hyintex.yml
@@ -22,8 +22,9 @@ datasets:
 #  - {dataset: MPI-ESM-MR,      project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2006, end_year: 2016}
 
 preprocessors:
-  preproc:
-    extract_levels: false
+  masking_preprocessor:
+    mask_landsea:
+      mask_out: sea
 
 diagnostics:
   hyint:
@@ -37,6 +38,12 @@ diagnostics:
     scripts:
       main:
         script: hyint/hyint.R
+        # General
+        run_diagnostic: true
+        run_timeseries: true
+        write_netcdf: true
+        write_plots: true       
+ 
         # Define whether model data should be regridded 
         # a) false to keep original resolution
         # b) set desired regridding resolution in cdo format e.g., "r320x160"
@@ -49,7 +56,6 @@ diagnostics:
         # 1) lon/lat maps per individual field/exp/multi-year mean
         # 2) lon/lat maps per individual field/exp-ref-diff/multi-year mean
         # 3) lon/lat maps multi-field/exp-ref-diff/multi-year mean
-        # 4) lon/lat maps multifield/exp/multiyear - skipped if using multi-year mean
         # 11) timeseries over required individual region/exp
         # 12) timeseries over multiple regions/exp
         # 13) timeseries with multiple models
@@ -69,15 +75,14 @@ diagnostics:
         # 11=Australia
         selregions: [2,4,5,6,7]
 
-     
         # Call preprocessing for ETCCDI indices calculated with climdex
         etccdi_preproc: true
 
         # Specify external path to repository of ETCCDI indices 
-        # (unless these are calculated in the same directory)
+        # (unless these are calculated in the same directory
+        # calling the extremeEvents diagnostic)
         etccdi_dir <- ""
 
-     
         # Select one or more fields for timeseries and maps from the following 
         # list (order-sensitive): 
         # SDII, DSL, WSL, HY-INT, ABS_INT, ABS_DSL, ABS_WSL, PA, R95, 
@@ -93,31 +98,14 @@ diagnostics:
 
        # Select automated or pre-set range of values in plots
         autolevels: true       
-       
 
         ## ------- Advanced settings ----------
-        # data
+        # data and maps
         removedesert: false  # T to remove (flag as NA) grid points with mean 
                              # annual pr < 0.5 mm/day (deserts, Giorgi2014)
-        masksealand: false # T to mask depending on seaLandElevation threshold
-        sealandelevation: 0 # a) 0 land; b) positive value: land above given
-                        # elevation; c) negative value: sea below given depth.
-                        # The topography/bathymetry file is generated with cdo 
-                        # from ETOPO data. 
-        reverse_masksealand: false # T to reject what selected,
-                                   #  F to keep what selected
-
-        # maps
         oplot_grid: false           # plot grid points over maps
-        map_continents: -2   # thickness of continents:
-                             # positive values in white, negative values in gray
-        map_continents_regions: false # plot also regional boundaries
-        ryearplot: 2006  # years to be plotted for experiments
-                         # (maps over individual years): 
-                         # a) actual years, b) "FIRST" = first year in dataset or 
-                         # c) "ALL"  = all years in dataset. E.g., c(1998,2000,2005)   
-        rmultiyear_mean: true # plot multiyear mean (this override ryearplot)
- 
+        boxregion: false # !=0 plot region boxes over global maps with 
+                         # thickness = abs(boxregion); white (>0) or grey (<0).  
 
         # timeseries and trends
         weight_tseries: true  # adopt area weights in timeseries
@@ -138,9 +126,5 @@ diagnostics:
                                     # time interval
         scale100years: true         # plot trends as 1/100 years
         scalepercent: false         # plot trends as % change (excluding hyint) 
-        oplot_grid: false           # plot grid points over maps
         
-        topography_highres: "~/work/data/Elevation/GMTED2010_15n030_0125deg.nc"
-        boxregion: false # !=0 plot region boxes over global maps with 
-                         # thickness = abs(boxregion); white (>0) or grey (<0).  
 
