Provenance corrected version

--- a/esmvaltool/recipes/recipe_extreme_index_wp7.yml
+++ b/esmvaltool/recipes/recipe_extreme_index_wp7.yml
@@ -38,7 +38,7 @@ preprocessors:
 
 
 diagnostics:
-  risk_index:
+  extreme_index:
     description: Calculate insurance extreme indices.
     variables:
       tasmax:
