--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -31,6 +31,7 @@ CMIP6:
     'GFDL-AM4': ['NOAA-GFDL']
     'GISS-E2-1-G': ['NASA-GISS']
     'IPSL-CM6A-LR': ['IPSL']
+    'MIROC6': ['MIROC']
 
 
 CMIP5:
