--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -131,13 +131,13 @@ OBS:
     default: 'Tier[tier]/[dataset]'
     BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
   input_file:
-    default: '[project]_[dataset]_[type]_[version]_[field]_[short_name]_*.nc'
+    default: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_*.nc'
     BSC: '[short_name]_*.nc'
   input_fx_dir:
     default: 'Tier[tier]/[dataset]'
   input_fx_file:
-    default: '[project]_[dataset]_[type]_fx_[fx_var].nc'
-  output_file: '[project]_[dataset]_[type]_[version]_[field]_[short_name]_[start_year]-[end_year]'
+    default: '[project]_[dataset]_[type]_[version]_fx_[fx_var].nc'
+  output_file: '[project]_[dataset]_[type]_[version]_[mip]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
 
 obs4mips:
