--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
 
 dependencies:
   # Python packages that cannot be installed from PyPI:
-  - iris=2.2.0
+  - iris
   - graphviz
   - matplotlib<3
   - python-stratify
