--- a/esmvaltool/recipes/recipe_flato13ipcc.yml
+++ b/esmvaltool/recipes/recipe_flato13ipcc.yml
@@ -685,20 +685,19 @@ diagnostics:
   ecs:
     description: Calculate ECS.
     variables:
-      tas: &spatial_mean_cmip5_r1i1p1_amon_t2ms
+      tas: &ecs_settings
         preprocessor: spatial_mean
         project: CMIP5
         ensemble: r1i1p1
         mip: Amon
         field: T2Ms
       rtmt:
-        <<: *spatial_mean_cmip5_r1i1p1_amon_t2ms
+        <<: *ecs_settings
     additional_datasets:
       - {dataset: bcc-csm1-1, exp: piControl, start_year: 160, end_year: 309}
       - {dataset: bcc-csm1-1, exp: abrupt4xCO2, start_year: 160, end_year: 309}
       - {dataset: bcc-csm1-1-m, exp: piControl, start_year: 240, end_year: 389}
-      - {dataset: bcc-csm1-1-m, exp: abrupt4xCO2, start_year: 240,
-         end_year: 389}
+      - {dataset: bcc-csm1-1-m, exp: abrupt4xCO2, start_year: 240, end_year: 389}
       - {dataset: CanESM2, exp: piControl, start_year: 2015, end_year: 2164}
       - {dataset: CanESM2, exp: abrupt4xCO2, start_year: 1850, end_year: 1999}
       - {dataset: CCSM4, exp: piControl, start_year: 800, end_year: 949}
@@ -715,21 +714,16 @@ diagnostics:
       - {dataset: GISS-E2-R, exp: abrupt4xCO2, start_year: 1850, end_year: 1999}
       - {dataset: inmcm4, exp: piControl, start_year: 2090, end_year: 2239}
       - {dataset: inmcm4, exp: abrupt4xCO2, start_year: 2090, end_year: 2239}
-      # - {dataset: IPSL-CM5A-LR, exp: piControl, start_year: 1850,
-      #    end_year: 1999}
-      # - {dataset: IPSL-CM5A-LR, exp: abrupt4xCO2, start_year: 1850,
-      #    end_year: 1999}
-      - {dataset: IPSL-CM5B-LR, exp: piControl, start_year: 1850,
-         end_year: 1999}
-      - {dataset: IPSL-CM5B-LR, exp: abrupt4xCO2, start_year: 1850,
-         end_year: 1999}
+      - {dataset: IPSL-CM5A-LR, exp: piControl, start_year: 1850, end_year: 1999}
+      - {dataset: IPSL-CM5A-LR, exp: abrupt4xCO2, start_year: 1850, end_year: 1999}
+      - {dataset: IPSL-CM5B-LR, exp: piControl, start_year: 1850, end_year: 1999}
+      - {dataset: IPSL-CM5B-LR, exp: abrupt4xCO2, start_year: 1850, end_year: 1999}
       - {dataset: MIROC5, exp: piControl, start_year: 2100, end_year: 2249}
       - {dataset: MIROC5, exp: abrupt4xCO2, start_year: 2100, end_year: 2249}
       - {dataset: MIROC-ESM, exp: piControl, start_year: 1800, end_year: 1949}
       - {dataset: MIROC-ESM, exp: abrupt4xCO2, start_year: 1, end_year: 150}
       - {dataset: MPI-ESM-LR, exp: piControl, start_year: 2015, end_year: 2164}
-      - {dataset: MPI-ESM-LR, exp: abrupt4xCO2, start_year: 1850,
-         end_year: 1999}
+      - {dataset: MPI-ESM-LR, exp: abrupt4xCO2, start_year: 1850, end_year: 1999}
       # Day is out of range for month (wait for iris > 2.0)
       # - {dataset: ACCESS1-0, exp: piControl, start_year: 300, end_year: 449}
       # - {dataset: ACCESS1-0, exp: abrupt4xCO2, start_year: 300, end_year: 449}
@@ -742,7 +736,7 @@ diagnostics:
     description: Plot ECS vs. GMSAT.
     variables:
       tas:
-        <<: *spatial_mean_cmip5_r1i1p1_amon_t2ms
+        <<: *ecs_settings
     additional_datasets:
       - {dataset: bcc-csm1-1, exp: piControl, start_year: 160, end_year: 309}
       - {dataset: bcc-csm1-1, exp: historical, start_year: 1961, end_year: 1990}
